# ReguRAG

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  app.py  config.py  evaluate.py  main.py  optimization_log.csv  pyproject.toml  requirements-eval.txt  requirements.txt
data/: basel_framework_sample.txt  china_banking_regulation_sample.txt
src/: document_loader.py  qa_chain.py  vector_store.py
src/language/: ChineseSplitter.py  EnglishOnlyLLM.py
src/regurag/: __init__.py  app.py  config.py  document_loader.py  evaluate.py  main.py  qa_chain.py  vector_store.py
src/regurag/parser/: __init__.py  chinese_splitter.py  english_only_llm.py
src/regurag/smoke/: __init__.py  test_embedding.py
src/test/: demo_set.csv  optimization_history.csv  test_set.csv  test_set_small.csv
src/unit/: test_embedding.py
